# mcf-python

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  authoring.md
scripts/: check_reader_sync.py  parity_check.py
src/mcf_compiler/: __init__.py  cli.py  compiler.py  lesson.py  model.py  parser.py  paths.py  render.py  yamlio.py
src/mcf_compiler/assets/reader/: library.js  player.js
src/mcf_compiler/assets/reader/styles/: activities.css  base.css  layout.css  responsive.css  tokens.css
tests/: __init__.py  conftest.py  test_cli.py  test_compiler.py  test_parser.py  test_reader_sync.py  test_render.py  test_validation.py
